# avey-b

./: LICENSE  README.md  bench_latency.py  bench_throughput.py  dataloader.py  gpu_confg.sh  pyproject.toml  setup.sh  train.sh  train_mlm.py
EncodEval/: bench_latency.py  bench_throughput.py  gen_niah.py  main.py  print_result.sh  print_results.sh  pyproject.toml  run.py  save_avey_model.py
EncodEval/configs/IR/: mldr_en_msmarco_pairs_lr1e-03_sd0.yaml  mldr_en_msmarco_pairs_lr1e-03_sd1.yaml  mldr_en_msmarco_pairs_lr1e-03_sd10.yaml  mldr_en_msmarco_pairs_lr1e-03_sd11.yaml  mldr_en_msmarco_pairs_lr1e-03_sd12.yaml  mldr_en_msmarco_pairs_lr1e-03_sd13.yaml  mldr_en_msmarco_pairs_lr1e-03_sd14.yaml  mldr_en_msmarco_pairs_lr1e-03_sd15.yaml  mldr_en_msmarco_pairs_lr1e-03_sd16.yaml  mldr_en_msmarco_pairs_lr1e-03_sd17.yaml  mldr_en_msmarco_pairs_lr1e-03_sd18.yaml  mldr_en_msmarco_pairs_lr1e-03_sd19.yaml  mldr_en_msmarco_pairs_lr1e-03_sd2.yaml  mldr_en_msmarco_pairs_lr1e-03_sd3.yaml  mldr_en_msmarco_pairs_lr1e-03_sd4.yaml  mldr_en_msmarco_pairs_lr1e-03_sd5.yaml  mldr_en_msmarco_pairs_lr1e-03_sd6.yaml  mldr_en_msmarco_pairs_lr1e-03_sd7.yaml  mldr_en_msmarco_pairs_lr1e-03_sd8.yaml  mldr_en_msmarco_pairs_lr1e-03_sd9.yaml  mldr_en_msmarco_pairs_lr1e-04_sd0.yaml  mldr_en_msmarco_pairs_lr1e-04_sd1.yaml  mldr_en_msmarco_pairs_lr1e-04_sd10.yaml  mldr_en_msmarco_pairs_lr1e-04_sd11.yaml  mldr_en_msmarco_pairs_lr1e-04_sd12.yaml  mldr_en_msmarco_pairs_lr1e-04_sd13.yaml  mldr_en_msmarco_pairs_lr1e-04_sd14.yaml  mldr_en_msmarco_pairs_lr1e-04_sd15.yaml  mldr_en_msmarco_pairs_lr1e-04_sd16.yaml  mldr_en_msmarco_pairs_lr1e-04_sd17.yaml  mldr_en_msmarco_pairs_lr1e-04_sd18.yaml  mldr_en_msmarco_pairs_lr1e-04_sd19.yaml  mldr_en_msmarco_pairs_lr1e-04_sd2.yaml  (+447 more)
EncodEval/encodeval/: datasets.py  tools.py
EncodEval/neobert/: config.json  model.py
avey_b/: configuration_avey.py  modeling_avey.py
neobert/: model.py
(+1169 files in other folders)
